2016-09-30  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix text colors and background of top level items in account tree 
	* Enhance visibility of icons with dark theme

2016-09-06  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix yearly recurrence

2016-09-05  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix and enhance exceptions dialog

2016-09-01  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix include subcategories in filtering and remove the button for transfers and when extra properties is disabled (for improved layout)
	* Remove quantity from incomes edit
	* Add tooltip to description and quantity
	* Fix not all transactions being listed in confirm schedule dialog

2016-08-29  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix charts withput extra properties
	* Fix charts without QtCharts

2016-08-25  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix value column in multi-account transaction dialog
	* Fix multiple duplicate completion items when removing, than adding transaction with unique description
	* Use extra properties by default

2016-08-24  Hanna Knutsson <hanna_k@fmgirl.com>

	* Place "All" last in export QIF dialog account combo (it is not a appropriate default option)
	* Common payee/payer for multi item transactions

2016-08-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Import/export sub categories from/to QIF files

2016-08-16  Hanna Knutsson <hanna_k@fmgirl.com>

	* Import sub categories, payees and quantity from CSV files

2016-08-15  Hanna Knutsson <hanna_k@fmgirl.com>

	* Autocomplete transaction also when selecting category or payee

2016-08-14  Hanna Knutsson <hanna_k@fmgirl.com>

	* Loans, multi account transactions, scheduled split transactions, debt payments, etc.
	* Bold summary/parent items with icons in account view

2016-07-08  Hanna Knutsson <hanna_k@fmgirl.com>

	* Export transactions to CSV file with a more compatible number format

2016-07-06  Hanna Knutsson <hanna_k@fmgirl.com>

	* Assets over time chart